# abacus

./: Cargo.toml  README.md  docker-compose.yml
article/: medium_article.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/latency-bench/: Cargo.toml
crates/latency-bench/src/: main.rs
crates/market-data-pub/: Cargo.toml
crates/market-data-pub/src/: main.rs
crates/md-handler/: Cargo.toml
crates/md-handler/src/: main.rs
crates/order-gateway/: Cargo.toml
crates/order-gateway/src/: main.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: ilp.rs  influx.rs  main.rs  order_recorder.rs  tick_recorder.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: main.rs
scripts/: run_bench.sh  run_demo.sh  run_infra.sh
