[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
zenoh = { version = "1.0", features = ["unstable"] }
iceoryx2 = "0.4"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
