[package]
name = "order-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "order-gateway"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
zenoh = { workspace = true }
iceoryx2 = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }
