[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "strategy"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
iceoryx2 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }
